refactored the first test